--- a/bsf-group-13/client/.env
+++ b/bsf-group-13/client/.env
@@ -4,7 +4,13 @@
 # be made on both your local machine and the server.
 
 # Client
+#REACT_APP_PASSCODE='777'
+#REACT_APP_HOST='http://localhost:3000'                  # local machine
+# REACT_APP_HOST='http://csci331.cs.montana.edu:3069'   # server
+#PORT=50xx
+
+# Client
 REACT_APP_PASSCODE='777'
-REACT_APP_HOST='http://localhost:3000'                  # local machine
-# REACT_APP_HOST='http://csci331.cs.montana.edu:30XX'   # server
-PORT=50xx
+REACT_APP_HOST=http://localhost:3000                  # local machine
+# REACT_APP_HOST='http://csci331.cs.montana.edu:3069'   # server
+PORT=5069
